--- a/YanisMat/narkomfin.html
+++ b/YanisMat/narkomfin.html
@@ -14,9 +14,9 @@
    <nav class="menubar">
      <a class="logo" a href="#"></a>
      <a href="#">О проекте</a>
-  </nav>
+   </nav>
 
-   <nav class="sitebar">
+   <nav class="sidebar">
      <ul>
        <li>
          <a href="">Дом Наркомфина</a>
