--- a/YanisMat/posts.html
+++ b/YanisMat/posts.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
+
+
     <title>Wikimedium</title>
 
     <meta name="description" content="Статьи из Википедии, сверстаные студентами, для обучения основам  веб-верстки а рамках образовательного проекта Hack Exchange">
@@ -12,23 +16,25 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://wikimedium.hack.exchange.posts.html">
     <meta property="og:title" content="Wikimedium">
-    <meta property="og:description" content="Статьи из Википедии, сверстаные студентами, для обучения основам  веб-верстки а рамках образовательного проекта Hack Exchange">>
-    <meta property="og:image" content="">
+    <meta property="og:description" content="Статьи из Википедии, сверстаные студентами, для обучения основам  веб-верстки а рамках образовательного проекта Hack Exchange">
+    <meta property="og:image" content="http://wikimedium.hack.exchange/images/share.png">
+
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
 
     <link rel="stylesheet" href="stylesheets/style.css">
 
     <script src="javascript/jquery-3.1.1.js"></script>
-    <div class="social-likes social-likes_single" data-single-title="Поделиться">
+    <!-- <div class="social-likes social-likes_single" data-single-title="Поделиться"> -->
 
   </head>
 
   <body class="posts">
+
     <nav class="menubar">
         <a class="logo" href="../posts.html"></a>
         <a class="about" href="../index.html"></a>
     </nav>
-
-
 
 
     <section class="postsFeed">
