--- a/YanisMat/index.html
+++ b/YanisMat/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 
 
     <title>Wikimedium - проект для изучения основ веб-верстки</title>
@@ -15,11 +15,11 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://wikimedium.hack.exchange.posts.html">
     <meta property="og:title" content="Wikimedium">
-    <meta property="og:description" content="Статьи из Википедии, сверстаные студентами, для обучения основам  веб-верстки а рамках образовательного проекта Hack Exchange">>
+    <meta property="og:description" content="Статьи из Википедии, сверстаные студентами, для обучения основам  веб-верстки а рамках образовательного проекта Hack Exchange">
     <meta property="og:image" content="http://wikimedium.hack.exchange/images/share.png">
 
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
 
     <link rel="stylesheet" href="stylesheets/style.css">
 
@@ -28,49 +28,54 @@
 
     <style media="screen">
     body {
-      height:
+      width: 1440px;
+      height: 3200px;
+      margin: 0 auto;
       background-image: url(images/wikimedium-mockup.png);
       background-repeat: no-repeat;
       background-position: top center;
+      box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
     }
     </style>
-
   </head>
-  <body>
+  <body class="landing">
+
 
     <nav class="menubar">
         <a class="logo" href="../posts.html"></a>
         <a class="about" href="../index.html">О проекте</a>
     </nav>
 
+    <section.class="landingWrapper">
 
-    <section class="mainSection">
+
+      <section class="mainSection">
       <section>
         <h2>Наглядный пример, <br>
-          чтобы учиться веб-вёрстке.</h2>
+          чтобы учиться веб-вёрстке. </h2>
         <p>Проект, разработанный командой Hæd Exchange, <br>
           для обучения основам веб-вёрстки в рамках <br>
-          образовательного проекта Hack Exchange.</p>
-        <figure></figure>
+          образовательного проекта Hack Exchange. </p>
+          <figure class "mockup" id="mockup1"></figure>
+      </section>
+      <figure></figure>
       </section>
 
-      <figure></figure>
-    </section>
 
-    <section class="mainSection">
+      <section class="mainSection">
       <section>
-        <h2>С нуля до первого сайта под компьютеры, <br> с
-          мартфоны и планшеты.</h2>
+        <h2>С нуля до первого сайта под компьютеры, <br>
+          смартфоны и планшеты.</h2>
         <p>Чтобы начать изучать веб-вёрстку на этом проекте <br>
           не требуется каких-то специальных знаний, кроме <br>
           базого умения пользоваться компьютером.</p>
-        <figure></figure>
+        <figure class "mockup" id="mockup2"></figure>
+      </section>
+      <figure class"mainSection left"></figure>
       </section>
 
-      <figure></figure>
-    </section>
 
-    <section class="mainSection">
+      <section class="mainSection">
       <section>
         <h2>Реальный проект, <br>
           реальный рабочий процесс.</h2>
@@ -79,25 +84,21 @@
           создания меню и использования эффектов,  <br>
           до адаптации под мобильные устройства и <br>
           использования скриптов.</p>
-        <figure></figure>
+      </section>
       </section>
 
-      <figure></figure>
-    </section>
 
-    <section class="mainSection">
+      <section class="mainSection">
       <section>
         <h2>Возможность самостоятельного  <br>
           и курируемого обучения.</h2>
         <p>Вы можете обучаться самостоятельно по исходному коду проекта, <br>
           выложенному на GitHub, или записаться на курс “Основы <br>
           веб-вёрстки с Захаром Днём” на Hack Exchange.</p>
-        <figure></figure>
       </section>
-
-      <figure></figure>
+      <figure class "mockup" id="mockup3"></figure>
+      </section>
     </section>
-
 
   </body>
 </html>
